# user-service/src/api/RoleRouter.ts
@@ -8,6 +8,30 @@ import { RoleFacade } from '../facade';
 const router: Router = Router();
 
 /**
+ * GET method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles:
+ *  get:
+ *    description: Get all Roles
+ *    tags: ["Roles"]
+ *    responses:
+ *      200:
+ *        description: All Roles
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/RoleTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.get('', RoleFacade.findAll);
+
+/**
  * POST method route
  * @example http://localhost:PORT/roles
  * @swagger
@@ -24,7 +48,7 @@ const router: Router = Router();
  *                  $ref: '#/components/schemas/RoleTo'
  *    responses:
  *      200:
- *        description: All Users
+ *        description: All Roles
  *        content:
  *          appication/json:
  *            schema:
@@ -36,8 +60,80 @@ const router: Router = Router();
  *            schema:
  *              $ref: '#/components/schemas/ErrorTo'
  */
-
 router.post('', RoleFacade.save);
+
+/**
+ * PUT method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles/{id}:
+ *  put:
+ *    description: create Roles
+ *    tags: ["Roles"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    requestBody:
+ *      description: object role
+ *      required: true
+ *      content:
+ *          application/json:
+ *              schema:
+ *                  $ref: '#/components/schemas/RoleTo'
+ *    responses:
+ *      200:
+ *        description: object role
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/RoleTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.put('/:id', RoleFacade.update);
+
+/**
+ * DELETE method route
+ * @example http://localhost:PORT/roles
+ * @swagger
+ * /roles/{id}:
+ *  delete:
+ *    description: create Roles
+ *    tags: ["Roles"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    responses:
+ *      200:
+ *        description: All Roles
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.delete('/:id', RoleFacade.publish);
 
 /**
  * @export {express.Router}
